# pugtube

./: .actrc  .dockerignore  .env.example  .env.vault  .eslintignore  .eslintrc.json  .gcloudignore  .gitignore  .npmrc  .pdm.toml  .swcrc  .tool-versions  .vercelignore  Dockerfile  README.md  cloudbuild.yml  cypress.config.ts  deploy.sh  docker-compose.yml  ecosystem.config.js  flightcontrol.json  jest.config.js  jest.setup.js  main.tf  next-sitemap.config.js  next.config.mjs  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  sentry.client.config.js  sentry.edge.config.js  sentry.properties  tailwind.config.cjs  taskfile.yml  tsconfig.json  variables.tf  vercel.include  vercel.json
.docker/: web.dockerfile  worker.dockerfile
.github/disabled_workflows/: preview.yml  release.yml
.github/workflows/: backend.yml  e2e.yml  frontend.yml  inngest.yml  preview.yml  release.yml  test.yml  tests.yml  ui-component.yml
.github/workspaces/: lint.yml
.husky/: pre-push
.storybook/: main.ts  preview.ts
.task/checksum/: build-web-local
api/: .dockerignore  .gitignore  .pdm.toml  .prefectignore  Dockerfile  agent.Dockerfile  conftest.py  db.sqlite3  manage.py  orion.Dockerfile  pyproject.toml  pytest.ini  requirements.txt
api/accounts/: baker_recipes.py  models.py  permissions.py  serializers.py  views.py
api/accounts/migrations/: 0001_initial.py
api/content/: admin.py  baker_recipes.py  conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
api/content/management/commands/: pexels.py
api/content/migrations/: 0001_initial.py
api/content/pexels/: api.py
api/content/templates/: base.html  landing_page.html
api/identity/: admin.py  apps.py  baker_recipes.py  conftest.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/identity/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py
api/pubtube/: asgi.py  settings.py  urls.py  wsgi.py
api/pugtube/: asgi.py  settings.py  shared.py  urls.py  wsgi.py
api/scripts/: entrypoint.sh  install.sh
api/templates/: docs.html
api/video/: admin.py  baker_recipes.py  conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
api/video/management/commands/: pexels.py
api/video/migrations/: 0001_initial.py  0002_upload_duration_upload_file_type_upload_fps_and_more.py  0003_image_video_videotimelinepreview_originalvideo_and_more.py
api/video/pexels/: api.py
api/workflows/: deploy.py  flows.py  tasks.py
cypress/e2e/: index.cy.ts  signin.cy.ts  signup.cy.ts  upload.cy.ts  upload.cy.tsx  watch.cy.ts
cypress/support/: commands.ts  component.ts
cypress/utils/: mock-router.tsx
prisma/: schema.prisma  seed.ts
src/: backfill.ts  env.mjs  middleware.ts  shell.ts  worker.ts
src-tauri/: tauri.conf.json
src/app/: error.tsx  layout.tsx  page.tsx
src/components/: auth-layout.tsx  auth.cy.tsx  auth.tsx  button.mdx  button.tsx  call-to-action.tsx  comment.cy.tsx  comment.tsx  container.tsx  faqs.tsx  fields.tsx  footer.tsx  header.cy.tsx  header.tsx  hero.tsx  json.mdx  json.tsx  layout.tsx  like.cy.tsx  like.tsx  logo.tsx  nav-link.tsx  old-header.tsx  pricing.tsx  primary-features.tsx  secondary-features.tsx  sidebar.tsx  spinner.cy.tsx  spinner.tsx  testimonials.tsx  timestamp.tsx  video-card.cy.tsx  video-card.tsx  video-player.cy.tsx  video-player.tsx
src/env/: client.mjs  env.mjs  schema.mjs  server.mjs
src/pages/: _app.tsx  _document.tsx  _error.tsx  account.tsx  index.tsx  privacy-policy.tsx  results.tsx  sign-in.tsx  sign-up.tsx  signin.tsx  signup.tsx  subscribe.tsx  terms-of-service.tsx  upload.tsx
src/server/: auth.ts  background.ts  db.ts  queue.ts  workflows.ts
src/styles/: globals.css
src/types/: cypress.d.ts  globals.d.ts  next-auth.d.ts
src/utils/: api.ts  auth.tsx  ffmpeg.ts  helpers.ts  s3.ts  (+6 more)
web/: .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+102 files in other folders)
