[project]
name = ""
version = ""
description = ""
authors = [
    {name = "abdul hamid", email = "abdulachik@icloud.com"},
]
dependencies = [
    "django>=4.1.4",
    "djangorestframework>=3.14.0",
    "django-filter>=22.1",
    "markdown>=3.4.1",
    "django-rest-knox>=4.2.0",
    "drf-extensions>=0.7.1",
    "djangorestframework-api-key>=2.2.0",
    "djangorestframework-guardian>=0.3.0",
    "django-guardian>=2.4.0",
    "django-health-check>=3.17.0",
    "django-extensions>=3.2.1",
    "django-environ>=0.9.0",
    "psycopg2-binary>=2.9.5",
    "gunicorn>=20.1.0",
]
requires-python = ">=3.11"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-django>=4.5.2",
    "black[d]>=22.12.0",
    "pylint>=2.15.8",
    "model-bakery>=1.9.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true
